fix word wrapping (#247)

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -31,6 +31,10 @@ pre code {
   border-left: 4px solid #6b52ae;
 }
 
+.navWrapper li {
+  word-wrap: normal;
+}
+
 .quote-source {
   display: block;
   text-align: right;
